--- a/products.html
+++ b/products.html
@@ -12,7 +12,7 @@
     <nav>
       <ul class="navbar">
         <a href="index.html">Home</a>
-        <a href="mission.html">Our Culture</a>
+        <a href="mission.html">Our Mission</a>
         <a href="products.html" class="current">Products</a>
         <a href="about.html">About</a>
       </ul>
