--- a/index.html
+++ b/index.html
@@ -1,9 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Coloring Books for Adults!</title>
+  <title>Color Your World</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+<header>
+  <div class="banner">
+  <h1 class="cyw">COLOR  YOUR  WORLD</H1>
+  </div>
+  <nav>
+    <ul class="navbar">
+      <a href="index.html" class="current">Home</a>
+      <a href="products.html">Products</a>
+      <a href="about.html">About</a>
+      <a href="mission.html">Our Culture</a>
+    </ul>
+  </nav>
+</header>
 <body>
-
+  <article class="body">
+    <h1>Welcome to our world of color!</h1>
+ 
+    <p>Locavore pickled art party twee, ugh shoreditch cornhole four loko 8-bit chia four dollar toast keytar banjo. Kickstarter tofu synth cred twee keffiyeh. You probably haven't heard of them put a bird on it gochujang, celiac williamsburg stumptown salvia. Humblebrag cardigan ramps scenester cliche, lumbersexual neutra fap chia vice small batch williamsburg. Cred etsy chambray, banh mi selvage umami lumbersexual you probably haven't heard of them actually knausgaard hammock literally cardigan cronut. Sartorial art party scenester cray. Biodiesel iPhone williamsburg hoodie ethical hella marfa, freegan distillery sustainable.</p>
+ 
+    <p>Cred brooklyn craft beer, hashtag brunch thundercats gentrify kinfolk. Celiac poutine selfies, pug XOXO echo park wolf whatever etsy everyday carry. Disrupt pop-up ugh 3 wolf moon lumbersexual tilde, kickstarter seitan put a bird on it VHS stumptown cornhole. Ethical literally cray etsy ennui. Typewriter pinterest drinking vinegar swag mumblecore you probably haven't heard of them. Neutra etsy kitsch, iPhone literally +1 fashion axe viral meh raw denim. Forage crucifix art party gochujang. Cronut cardigan etsy +1 gluten-free freegan fashion axe, kickstarter dreamcatcher retro artisan.</p>
+    <div class="index_img_wrapper">
+    <img class="index_img" img src="images/example1.jpg" alt="Mandala Coloring Page">
+    <img class="index_img" img src="images/example2.jpg" alt="Ocean Coloring Page">
+    <img class="index_img" img src="images/example3.jpg" alt="Paisley Coloring Page">
+    </div>
+    <p>Tilde slow-carb flexitarian, crucifix master cleanse banjo tousled bespoke migas DIY trust fund pinterest. Thundercats heirloom portland, salvia ethical YOLO cold-pressed keytar hoodie schlitz. Helvetica tofu heirloom pug, gochujang migas 8-bit 3 wolf moon franzen messenger bag asymmetrical microdosing iPhone raw denim. Cold-pressed fashion axe selfies, tofu sartorial occupy schlitz normcore distillery mustache. 8-bit lomo fap echo park taxidermy, viral letterpress chia mlkshk gluten-free authentic post-ironic. Small batch freegan typewriter, tacos photo booth ramps wolf deep v you probably haven't heard of them whatever.</p>
+ 
+    <p>Blog migas franzen scenester. Fashion axe hashtag direct trade asymmetrical. Microdosing cray gentrify semiotics, fanny pack street art pop-up wolf iPhone slow-carb vinyl everyday carry venmo. Chicharrones messenger bag four dollar toast, try-hard ethical pop-up shoreditch sriracha gochujang butcher freegan actually hella. Blog small batch craft beer, distillery biodiesel fap literally hammock. Shabby chic church-key cronut, distillery hella leggings pickled. Brooklyn vice tacos, beard keffiyeh hella pour-over cornhole green juice typewriter banjo gochujang pabst single-origin coffee.</p>
+   
+    
+  </article>
 </body>
+<footer>&copy; Charlie's Angels 2016</footer>
 </html>
