tweaked mission css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="index.html" class="current">Home</a>
       <a href="products.html">Products</a>
       <a href="about.html">About</a>
-      <a href="mission.html">Our Culture</a>
+      <a href="mission.html">Our Mission</a>
     </ul>
   </nav>
 </header>
@@ -33,8 +33,6 @@
     <p>Tilde slow-carb flexitarian, crucifix master cleanse banjo tousled bespoke migas DIY trust fund pinterest. Thundercats heirloom portland, salvia ethical YOLO cold-pressed keytar hoodie schlitz. Helvetica tofu heirloom pug, gochujang migas 8-bit 3 wolf moon franzen messenger bag asymmetrical microdosing iPhone raw denim. Cold-pressed fashion axe selfies, tofu sartorial occupy schlitz normcore distillery mustache. 8-bit lomo fap echo park taxidermy, viral letterpress chia mlkshk gluten-free authentic post-ironic. Small batch freegan typewriter, tacos photo booth ramps wolf deep v you probably haven't heard of them whatever.</p>
  
     <p>Blog migas franzen scenester. Fashion axe hashtag direct trade asymmetrical. Microdosing cray gentrify semiotics, fanny pack street art pop-up wolf iPhone slow-carb vinyl everyday carry venmo. Chicharrones messenger bag four dollar toast, try-hard ethical pop-up shoreditch sriracha gochujang butcher freegan actually hella. Blog small batch craft beer, distillery biodiesel fap literally hammock. Shabby chic church-key cronut, distillery hella leggings pickled. Brooklyn vice tacos, beard keffiyeh hella pour-over cornhole green juice typewriter banjo gochujang pabst single-origin coffee.</p>
-   
-    
   </article>
 </body>
 <footer>&copy; Charlie's Angels 2016</footer>
