here's my upgrade

--- a/products.html
+++ b/products.html
@@ -19,10 +19,12 @@
     </nav>
   </header>
 
+
 <div id="products">
   
 </div>
 
 <script type="text/javascript" src="product.js"></script>
 </body>
+<footer>&copy; Charlie's Angels 2016</footer>
 </html>
