synced products html to styling

--- a/products.html
+++ b/products.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Products</title>
+  <title>Products | Color Your World</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <title>Color Your World Main Page</title>
+  <link rel="stylesheet" type="text/css" href="products.css">
 </head>
-<body>
   <header>
-    <h1>Color Your World Products</h1>
+    <div class="banner">
+      <h1 class="cyw">COLOR  YOUR  WORLD</H1>
+    </div>
     <nav>
       <ul class="navbar">
-        <a href="index.html">Home</a>
-        <a href="mission.html">Our Culture</a>
-        <a href="products.html" class="current">Products</a>
+        <a href="index.html" class="current">Home</a>
+        <a href="products.html">Products</a>
         <a href="about.html">About</a>
-      </ul>
+        <a href="mission.html">Our Mission</a>
+     </ul>
     </nav>
   </header>
-
+<body>
 <div id="products">
   
 </div>
 
 <script type="text/javascript" src="product.js"></script>
 </body>
+<footer>&copy; Charlie's Angels 2016</footer>
 </html>
