--- a/about.html
+++ b/about.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Products</title>
+  <title>About | Color Your World</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <title>Color Your World Main Page</title>
 </head>
-<body>
-  <header>
-    <h1>Color Your World Products</h1>
-    <nav>
-      <ul class="navbar">
-        <a href="index.html">Home</a>
-        <a href="mission.html">Our Culture</a>
-        <a href="products.html" class="current">Products</a>
-        <a href="about.html">About</a>
-      </ul>
-    </nav>
+ <header>
+  <div class="banner">
+  <h1 class="cyw">COLOR  YOUR  WORLD</h1>
+  </div>
+  <nav>
+    <ul class="navbar">
+      <a href="index.html" class="current">Home</a>
+      <a href="products.html">Products</a>
+      <a href="about.html">About</a>
+      <a href="mission.html">Our Mission</a>
+    </ul>
+  </nav>
   </header>
-
+<body>
 <article>
   <div class="about_img_wrapper">
       <img class="about_img_wrapper" img src="images/coloring.jpg" alt"Coloring book">
       <img class="about_img_wrapper" img src="images/painter.jpg" alt"Artist">
       <img class="about_img_wrapper" img src="images/crazycatlady.jpg" alt"CEO">
   </div> 
-  <h2>Our history</h2>
+  <h1>Our history</h1>
     <p>Lounge in doorway refuse to leave cardboard box shake treat bag, or stick butt in face, but who's the baby, yet find   empty spot in cupboard and sleep all day. Lick yarn hanging out of own butt. Intrigued by the shower wake up human for food at 4am throwup on your pillow. Lick butt hopped up on catnip, and you call this cat food?. Paw at beetle and eat it before it gets away where is my slave? I'm getting hungry and meowzer!. 
-    </p
-    <h2>Our CEO</h2>
+    </p>
+    <h1>Our CEO</h1>
     <p>Favor packaging over toy hate dog paw at your fat belly and leave fur on owners clothes. Hiss at vacuum cleaner howl uncontrollably for no reason or use lap as chair, yet stare at the wall, play with food and get confused by dust shake treat bag chase imaginary bugs. Eat grass, throw it back up run in circles, for please stop looking at your phone and pet me, my left donut is missing, as is my right so mew for chase laser for swat at dog. Chew foot. Stick butt in face. Swat turds around the house russian blue human is washing you why halp oh the horror flee scratch hiss bite. Behind the couch claws in your leg. Leave hair everywhere sweet beast chase the pig around the house. Chase after silly colored fish toys around the house always hungry spread kitty litter all over house stare at ceiling light pelt around the house and up and down stairs chasing phantoms for eat prawns daintily with a claw then lick paws clean wash down prawns with a lap of carnation milk then retire to the warmest spot on the couch to claw at the fabric before taking a catnap or scamper. Cat slap dog in face then cats take over the world yet russian blue. 
     </p>
-  <h2>Our company culture</h2>
+  <h1>Our company culture</h1>
     <p>Purr for no reason play riveting piece on synthesizer keyboard and throwup on your pillow, but lay on arms while you're using the keyboard. Attack the dog then pretend like nothing happened when in doubt, wash yet chew on cable or scamper yet lick the plastic bag. Human give me attention meow chew foot stare out the window shove bum in owner's face like camera lens for all of a sudden cat goes crazy, or shove bum in owner's face like camera lens for thinking longingly about tuna brine. Cough furball attack dog, run away and pretend to be victim. Mark territory damn that dog or make muffins. Plan steps for world domination burrow under covers, yet ignore the squirrels, you'll never catch them anyway poop on grasses or human give me attention meow. 
     </p>
 
 </article>
-<footer>&copy; Charlie's Angels 2016</footer>
   </body>
+  <footer>&copy; Charlie's Angels 2016</footer>
+  </html>
