--- a/products.html
+++ b/products.html
@@ -4,21 +4,22 @@
   <title>Products</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <title>Color Your World Main Page</title>
+  <link rel="stylesheet" type="text/css" href="products.css">
 </head>
+<header>
+  <div class="banner">
+  <h1 class="cyw">COLOR  YOUR  WORLD</h1>
+  </div>
+  <nav>
+    <ul class="navbar">
+      <a href="index.html" class="current">Home</a>
+      <a href="products.html">Products</a>
+      <a href="about.html">About</a>
+      <a href="mission.html">Our Mission</a>
+    </ul>
+  </nav>
+</header>
 <body>
-  <header>
-    <h1>Color Your World Products</h1>
-    <nav>
-      <ul class="navbar">
-        <a href="index.html">Home</a>
-        <a href="mission.html">Our Culture</a>
-        <a href="products.html" class="current">Products</a>
-        <a href="about.html">About</a>
-      </ul>
-    </nav>
-  </header>
-
 
 <div id="products">
   
