--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <header>
   <div class="banner">
-  <h1 class="cyw">COLOR  YOUR  WORLD</H1>
+  <h1 class="cyw">COLOR  YOUR  WORLD</h1>
   </div>
   <nav>
     <ul class="navbar">
