hopefully for the LAST TIME

--- a/about.html
+++ b/about.html
@@ -19,11 +19,11 @@
   </nav>
   </header>
 <body>
-<article>
+<article class="body">
   <div class="about_img_wrapper">
-      <img class="about_img_wrapper" img src="images/coloring.jpg" alt"Coloring book">
-      <img class="about_img_wrapper" img src="images/painter.jpg" alt"Artist">
-      <img class="about_img_wrapper" img src="images/crazycatlady.jpg" alt"CEO">
+      <img class="about_img" img src="images/coloring.jpg" alt"Coloring book">
+      <img class="about_img" img src="images/painter.jpg" alt"Artist">
+      <img class="about_img" img src="images/crazycatlady.jpg" alt"CEO">
   </div> 
   <h1>Our history</h1>
     <p>Lounge in doorway refuse to leave cardboard box shake treat bag, or stick butt in face, but who's the baby, yet find   empty spot in cupboard and sleep all day. Lick yarn hanging out of own butt. Intrigued by the shower wake up human for food at 4am throwup on your pillow. Lick butt hopped up on catnip, and you call this cat food?. Paw at beetle and eat it before it gets away where is my slave? I'm getting hungry and meowzer!. 
